:heavy_plus_sign: installed typewriter effect

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "remixicon": "^2.5.0"
+    "react-facebook-login": "^4.1.1",
+    "remixicon": "^2.5.0",
+    "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
