--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "axios": "^0.27.2",
+    "firebase": "^8.10.1",
     "next": "12.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
