--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
+    "@react-email/button": "^0.1.0",
+    "@react-email/components": "^0.1.0",
+    "@react-email/html": "^0.0.11",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/nodemailer": "^6.4.17",
     "axios": "^0.27.2",
     "firebase": "^9.8.3",
     "next": "12.1.5",
     "nextjs-cors": "^2.1.2",
+    "nodemailer": "^7.0.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-email": "^4.0.16",
     "react-facebook-login": "^4.1.1",
     "react-spinners-kit": "^1.9.1",
     "remixicon": "^2.5.0",
